change to github

--- a/class07.R/class07.Rmd
+++ b/class07.R/class07.Rmd
@@ -2,7 +2,7 @@
 title: "class7"
 author: "DongSu Kim"
 date: "1/28/2020"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
